@@ -1,0 +1,51 @@
+<PixelEndcapLayers>
+
+<PixelEndcapRing>
+  <Name> PixelEndcapRing0 </Name>
+  <LayerNumber> 0 </LayerNumber>
+  <LayerPosition> 1 </LayerPosition>
+  <RingPositions> 1308.0 1398.3 1495.5 1600.4 1713.5 1835.3 1966.7 2108.3 2260.9 2395.4 2516.5 2611.1 2709.6 2851.0 3000.0 </RingPositions>
+  <Radius> 80. </Radius>
+  <RadiusType> Inner </RadiusType>
+  <NumberOfSectors> 24 </NumberOfSectors>
+  <RingModuleType> FourChip_RD53_25x100_thin </RingModuleType>
+  <RingModuleZSeparation> 6. </RingModuleZSeparation>
+</PixelEndcapRing>
+
+<PixelEndcapRing>
+  <Name> PixelEndcapRing1 </Name>
+  <LayerNumber> 1 </LayerNumber>
+  <LayerPosition> 2 </LayerPosition>
+  <RingPositions> 823.0 974.3 1100.7 1246.5 1334.2 1428.9 1531.3 1641.8 1761.1 1890.0 2203.2 2572.8 3000.0 </RingPositions>
+  <Radius> 150. </Radius>
+  <RadiusType> Inner </RadiusType>
+  <NumberOfSectors> 36 </NumberOfSectors>
+  <RingModuleType> FourChip_RD53_25x100 </RingModuleType>
+  <RingModuleZSeparation> 6. </RingModuleZSeparation>
+</PixelEndcapRing>
+
+<PixelEndcapRing>
+  <Name> PixelEndcapRing2 </Name>
+  <LayerNumber> 2 </LayerNumber>
+  <LayerPosition> 3 </LayerPosition>
+  <RingPositions> 823.0 939.0 1076.4 1237.8 1427.2 1649.6 1910.7 2217.3 2577.3 3000.0 </RingPositions>
+  <Radius> 212.5 </Radius>
+  <RadiusType> Inner </RadiusType>
+  <NumberOfSectors> 48 </NumberOfSectors>
+  <RingModuleType> FourChip_RD53_25x100 </RingModuleType>
+  <RingModuleZSeparation> 6. </RingModuleZSeparation>
+</PixelEndcapRing>
+
+<PixelEndcapRing>
+  <Name> PixelEndcapRing3 </Name>
+  <LayerNumber> 3 </LayerNumber>
+  <LayerPosition> 4 </LayerPosition>
+  <RingPositions> 823.0 916.3 1023.9 1146.6 1286.4 1445.9 1627.8 1835.3 2071.8 2341.6 2649.2 3000.0 </RingPositions>
+  <RadiusType> Inner </RadiusType>
+  <Radius> 275.0 </Radius>
+  <NumberOfSectors> 60 </NumberOfSectors>
+  <RingModuleType> FourChip_RD53_25x100 </RingModuleType>
+  <RingModuleZSeparation> 6. </RingModuleZSeparation>
+</PixelEndcapRing>
+
+</PixelEndcapLayers>
